MDEV-31660 : Assertion `client_state.transaction().active() in wsrep_thd_append_key

At the moment we cannot support BINLOG_FORMAT_[MIXED|STATEMENT]
during CREATE TABLE AS SELECT. Statement will use BINLOG_FORMAT_ROW
instead.